Proxy bones not moving #55076

Closed
opened 2018-05-15 14:32:23 +02:00 by Dalai Felinto · 5 comments

Blender Version
Broken: 55b241d32a (blender2.8 HEAD)
Worked: 2.79a

Short description of error
Proxy is not working at all.

Exact steps for others to reproduce the error

  • Run with copy-on-write
  • From spring sample files: Link/Instance:
    //lib/char/autumn/autumn.blenrig.blend/Autumn_high.blend
  • Make a proxy of autumn-blenrig
  • In pose mode try to move any of the bones.
**Blender Version** Broken: 55b241d32a (blender2.8 HEAD) Worked: 2.79a **Short description of error** Proxy is not working at all. **Exact steps for others to reproduce the error** * Run with copy-on-write * From spring sample files: Link/Instance: `//lib/char/autumn/autumn.blenrig.blend/Autumn_high.blend` * Make a proxy of `autumn-blenrig` * In pose mode try to move any of the bones.
Bastien Montagne was assigned by Dalai Felinto 2018-05-15 14:32:23 +02:00
Author
Owner

Added subscribers: @dfelinto, @Sergey

Added subscribers: @dfelinto, @Sergey
Dalai Felinto changed title from Static override: Proxy bones not moving to Proxy bones not moving 2018-05-15 14:33:07 +02:00

There are several different issues here....

Linking Dweebs dog and making a proxy of it works for me.

Make dummy cube + single bone arm, linking this and making proxy gives weird results, sometimes I get no cube and a selectable bone in Posemode than can then be edited normally, sometimes I get cube too, and no way to actually select the proxy bone in Posemode....

Linking Autumn and making a proxy of the rig gives a good looking proxy arm with selectable bones, but totally impossible to edit those bones.....

sic

There are several different issues here.... Linking Dweebs dog and making a proxy of it works for me. Make dummy cube + single bone arm, linking this and making proxy gives weird results, sometimes I get no cube and a selectable bone in Posemode than can then be edited normally, sometimes I get cube too, and no way to actually select the proxy bone in Posemode.... Linking Autumn and making a proxy of the rig gives a good looking proxy arm with selectable bones, but totally impossible to edit those bones..... *sic*

Finally found the issue... Actually, 2.8 was behaving more correctly than 2.7x here, you should not be able to edit bones on locked layers!
But it seems to be a bug-used-as-feature to work around other issue, so for now will hack in 2.8 code to bring back similar behavior as in 2.7x!

Finally found the issue... Actually, 2.8 was behaving more correctly than 2.7x here, you should not be able to edit bones on locked layers! But it seems to be a bug-used-as-feature to work around other issue, so for now will hack in 2.8 code to bring back similar behavior as in 2.7x!

This issue was referenced by f0c0d11ea2

This issue was referenced by f0c0d11ea2cfbe44b079a544a5c91fe888f28c80

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55076
No description provided.